# tchat

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  ONBOARDING.md  README.md  exceptions.py  install.sh  main.py  project_spec.md  pyproject.toml  pyrightconfig.json  requirements.txt  what_do_i_want_to_achieve.md
chat/client/: connection.py  identity.py  receiver.py  runner.py  sender.py
chat/commands/: base.py  help.py  status.py  whoonline.py
chat/handlers/: __init__.py  base.py  chat.py  command.py  join.py  leave.py
chat/message/: framing.py  message.py  types.py
chat/server/: admin.py  server.py  session.py
chat/state/: server_state.py
client/: client.py
config/: config.example.toml  config.py  config.toml  config.yaml
logger/: __init__.py  colors.py  logger.py  typewriter.py
message/: __init__.py  message.py
scripts/: build-client.sh  bump_version.py  check_versions.py  client-install.sh  deploy-pi.sh  deploy.sh  publish-client.sh  setup-pi.sh  sync-client.sh
server/: commands.py  server.py  state.py
server/handler/: __init__.py  broadcast.py  chat_handler.py  command_handler.py  commands.py  handler.py  join_handler.py  leave_handler.py
tchat/: exceptions.py  version.py
tchat/client/: connection.py  receiver.py  runner.py  sender.py  updater.py
tchat/commands/: base.py  help.py  status.py  whoonline.py
tchat/config/: config.py  config.toml
tchat/handlers/: __init__.py  base.py  chat.py  command.py  join.py  leave.py  typing.py
tchat/logger/: base.py  client.py  logger.py  server.py
tchat/message/: framing.py  message.py  (+1 more)
(+15 files in other folders)
